// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArtifactsManager .artifactsApi .requestIdleCallback() should catch errors, report them if callback fails, and move on  1`] = `
Array [
  Array [
    Object {
      "err": [Error: test onIdleCallback error],
      "event": "PLUGIN_ERROR",
      "methodName": "onIdleCallback",
      "plugin": "testPlugin",
    },
    "Caught exception inside plugin (testPlugin) at phase onIdleCallback",
  ],
]
`;

exports[`ArtifactsManager .artifactsApi .requestIdleCallback() should gracefully handle a case when plugin object is not passed and use "unknown" as a name placeholder 1`] = `
Array [
  Array [
    Object {
      "err": [Error: test onIdleCallback error],
      "event": "PLUGIN_ERROR",
      "methodName": "onIdleCallback",
      "plugin": "unknown",
    },
    "Caught exception inside plugin (unknown) at phase onIdleCallback",
  ],
]
`;

exports[`ArtifactsManager .artifactsApi hooks error handling should catch .onAfterAll errors 1`] = `
Array [
  Array [
    Object {
      "err": [Error: test onAfterAll error],
      "event": "PLUGIN_ERROR",
      "methodName": "onAfterAll",
      "plugin": "testPlugin",
    },
    "Caught exception inside plugin (testPlugin) at phase onAfterAll",
  ],
]
`;

exports[`ArtifactsManager .artifactsApi hooks error handling should catch .onAfterEach errors 1`] = `
Array [
  Array [
    Object {
      "err": [Error: test onAfterEach error],
      "event": "PLUGIN_ERROR",
      "methodName": "onAfterEach",
      "plugin": "testPlugin",
    },
    "Caught exception inside plugin (testPlugin) at phase onAfterEach",
  ],
]
`;

exports[`ArtifactsManager .artifactsApi hooks error handling should catch .onBeforeAll errors 1`] = `
Array [
  Array [
    Object {
      "err": [Error: test onBeforeAll error],
      "event": "PLUGIN_ERROR",
      "methodName": "onBeforeAll",
      "plugin": "testPlugin",
    },
    "Caught exception inside plugin (testPlugin) at phase onBeforeAll",
  ],
]
`;

exports[`ArtifactsManager .artifactsApi hooks error handling should catch .onBeforeEach errors 1`] = `
Array [
  Array [
    Object {
      "err": [Error: test onBeforeEach error],
      "event": "PLUGIN_ERROR",
      "methodName": "onBeforeEach",
      "plugin": "testPlugin",
    },
    "Caught exception inside plugin (testPlugin) at phase onBeforeEach",
  ],
]
`;

exports[`ArtifactsManager .artifactsApi hooks error handling should catch .onBeforeLaunchApp errors 1`] = `
Array [
  Array [
    Object {
      "err": [Error: test onBeforeLaunchApp error],
      "event": "PLUGIN_ERROR",
      "methodName": "onBeforeLaunchApp",
      "plugin": "testPlugin",
    },
    "Caught exception inside plugin (testPlugin) at phase onBeforeLaunchApp",
  ],
]
`;

exports[`ArtifactsManager .artifactsApi hooks error handling should catch .onBootDevice errors 1`] = `
Array [
  Array [
    Object {
      "err": [Error: test onBootDevice error],
      "event": "PLUGIN_ERROR",
      "methodName": "onBootDevice",
      "plugin": "testPlugin",
    },
    "Caught exception inside plugin (testPlugin) at phase onBootDevice",
  ],
]
`;

exports[`ArtifactsManager .artifactsApi hooks error handling should catch .onLaunchApp errors 1`] = `
Array [
  Array [
    Object {
      "err": [Error: test onLaunchApp error],
      "event": "PLUGIN_ERROR",
      "methodName": "onLaunchApp",
      "plugin": "testPlugin",
    },
    "Caught exception inside plugin (testPlugin) at phase onLaunchApp",
  ],
]
`;

exports[`ArtifactsManager .artifactsApi hooks error handling should catch .onShutdownDevice errors 1`] = `
Array [
  Array [
    Object {
      "err": [Error: test onShutdownDevice error],
      "event": "PLUGIN_ERROR",
      "methodName": "onShutdownDevice",
      "plugin": "testPlugin",
    },
    "Caught exception inside plugin (testPlugin) at phase onShutdownDevice",
  ],
]
`;

exports[`ArtifactsManager .artifactsApi hooks error handling should catch .onTerminate errors 1`] = `
Array [
  Array [
    Object {
      "err": [Error: test onTerminate error],
      "event": "PLUGIN_ERROR",
      "methodName": "onTerminate",
      "plugin": "testPlugin",
    },
    "Caught exception inside plugin (testPlugin) at phase onTerminate",
  ],
]
`;
